[package]
name = "hotfuzz-rs-module"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
bumpalo = { version = "3.13.0", features = ["boxed", "collections"] }
emacs = { version = "0.18.0", git = "https://github.com/Alan-Chen99/emacs-module-rs.git"}
itertools = "0.11.0"
rayon = "1.7.0"
scopeguard = "1.1.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
strip = true
